--- a/River/RiverApp.csproj
+++ b/River/RiverApp.csproj
@@ -21,4 +21,9 @@
     <None Include="compilerconfig.json" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CommandCore\CommandCore.csproj" />
+    <ProjectReference Include="..\DataCore\DataCore.csproj" />
+  </ItemGroup>
+
 </Project>
